<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/selecinarOpcaoLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_select_op"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecionar_nr_jogadores"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/opcaoRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/op_dois"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/_02_jogadores"/>
            <RadioButton
                android:id="@+id/op_tres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_03_jogadores"/>
        </RadioGroup>

        <TextView
            android:id="@+id/txt_select_op_jogada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/selecionar_nr_jogadas"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/opcaoRadioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/op_uma_jogada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/_01_jogo"/>
            <RadioButton
                android:id="@+id/op_tres_jogada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_03_jogos"/>
            <RadioButton
                android:id="@+id/op_cinco_jogada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_05_jogos"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/btnCancelSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>