<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/lbl_escolha_jogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/escolha_a_sua_jogada"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/jogadaLl"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/pedraBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@mipmap/pedra"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/papelBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/papel"
            android:contentDescription="@string/todo"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/tesouraBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/tesoura"
            android:contentDescription="@string/todo"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelJogadaComputador01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_computador_01"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/jogadaComputador01Img"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/labelJogadaComputador02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_computador_02"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/jogadaComputador02Img"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="270dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/labelResultadoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="350dp"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="380dp"/>

</FrameLayout>